Update EditableBufferedReader.java